kubernetes/system/elk/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: logging
spec:
  parentRefs:
    - name: private
      namespace: argocd
      sectionName: private-https
  hostnames:
    - kibana.home.547600.xyz
  rules:
    - backendRefs:
        - name: elk-kb-http
          port: 5601
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana-http-redirect
  namespace: logging
spec:
  parentRefs:
    - name: private
      namespace: argocd
      sectionName: private-http
  hostnames:
    - kibana.home.547600.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
